Hotfix: env example

--- a/whisper_turbo_selfhosted/backend/.env-example
+++ b/whisper_turbo_selfhosted/backend/.env-example
@@ -1,5 +1,5 @@
-RMQ_HOST=0.0.0.0
+RMQ_HOST=rmq
 RMQ_PORT=5672
 RMQ_USER=demo-user
 RMQ_PASSWORD=demo-pwd
-RMQ_URL=amqp://demo-user:demo-pwd@0.0.0.0:5672/
+RMQ_URL=amqp://demo-user:demo-pwd@rmq:5672/
