--- a/whisper_turbo_selfhosted/frontend/whisper-realtime-frontend/Dockerfile
+++ b/whisper_turbo_selfhosted/frontend/whisper-realtime-frontend/Dockerfile
@@ -8,5 +8,9 @@ RUN npm run build
 FROM nginx:alpine
 
 COPY --from=builder /app/dist /usr/share/nginx/html
+
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+RUN mkdir -p /usr/share/nginx/html/files
+
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
